# OrbitOps

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  LABELS.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: alarm-event-schema.md  alarm-policy-catalog.md  alarm-policy-schema.md  architecture.md  link-event-schema.md  mission-profile-catalog.md  operations.md  parser-hardening.md  protocol.md  releasing.md  repository-settings.md  session-inspection.md  threat-model.md
docs/adr/: 0001-link-emulator-semantics.md  0002-mission-profile-semantics.md  0003-alarm-lifecycle-semantics.md  0003-link-run-metadata.md  0004-alarm-event-compatibility.md  0005-session-correlation-semantics.md
ground_station/orbitops/: __init__.py  alarm_events.py  alarms.py  cli.py  protocol.py  receiver.py  recorder.py
ground_station/orbitops/alarm_policies/: __init__.py  catalog.py  cli.py  errors.py  fingerprint.py  model.py  parser.py
ground_station/orbitops/alarm_policies/builtin/: __init__.py  conservative.toml  power-demo.toml  thermal-demo.toml
ground_station/orbitops/link/: __init__.py  cli.py  config.py  decisions.py  events.py  fingerprint.py  impairments.py  runtime.py  scheduler.py  statistics.py
ground_station/orbitops/profiles/: __init__.py  catalog.py  cli.py  errors.py  fingerprint.py  model.py  parser.py
ground_station/orbitops/profiles/builtin/: __init__.py  degraded-link.toml  high-latency.toml  intermittent-loss.toml  nominal.toml
ground_station/orbitops/session/: __init__.py  cli.py  correlation.py  errors.py  inspection.py  models.py  reporting.py
onboard/: CMakeLists.txt
onboard/include/orbitops/: telemetry.hpp
onboard/src/: main.cpp
onboard/tests/: test_packet.cpp
scripts/: alarm_demo_check.py  alarm_event_package_check.py  alarm_policy_package_check.py  demo.sh  integration_check.py  link_demo_check.py  link_integration_check.py  profile_demo_check.py  profile_package_check.py  render_session_demo_visual.py  session_demo_check.py  session_demo_visual_check.py  session_inspection_package_check.py
tests/: parser_mutations.py  test_alarm_events.py  test_alarm_policies.py  test_alarm_policy_catalog.py  test_alarm_policy_cli.py  test_alarms.py  test_cli.py  test_link_cli.py  test_link_events.py  test_link_impairments.py  test_link_runtime.py  test_link_scheduler.py  test_link_statistics.py  test_mission_profiles.py  test_parser_hardening.py  test_profile_catalog.py  test_profile_cli.py  test_protocol.py  test_receiver.py  test_recorder.py  test_session_cli.py  test_session_correlation.py  test_session_inspection.py  test_session_models.py  test_session_reporting.py
tests/fixtures/alarm_policies/: invalid-unknown-key.toml  standard.toml
tests/fixtures/parser_corpus/: README.md
tests/fixtures/parser_corpus/alarm-events/: unknown-key.jsonl
tests/fixtures/parser_corpus/alarm-policies/: unknown-key.toml
tests/fixtures/parser_corpus/link-events/: unknown-key.jsonl
tests/fixtures/parser_corpus/mission-profiles/: unknown-key.toml
tests/fixtures/parser_corpus/telemetry-recording/: boolean-version.jsonl  nonfinite-time.jsonl  oversized-time.jsonl  unknown-key.jsonl  wrong-packet-hex-type.jsonl
tests/fixtures/profiles/: degraded-link.toml  invalid-schema-version.toml  invalid-unknown-key.toml
