[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orbitops-ground-station"
version = "0.1.0"
description = "Dependency-light CubeSat telemetry ground-station simulator"
requires-python = ">=3.11"
authors = [{ name = "Davide Calò" }]

[tool.setuptools.packages.find]
where = ["ground_station"]
