cmake_minimum_required(VERSION 3.20)
project(orbitops_sim VERSION 0.1.0 LANGUAGES CXX)

include(CTest)
include(GNUInstallDirs)

option(ORBITOPS_WARNINGS_AS_ERRORS "Treat compiler warnings as errors" OFF)
option(ORBITOPS_ENABLE_SANITIZERS "Enable AddressSanitizer and UndefinedBehaviorSanitizer" OFF)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

function(orbitops_apply_quality_options target)
    if(MSVC)
        target_compile_options(${target} PRIVATE /W4)
        if(ORBITOPS_WARNINGS_AS_ERRORS)
            target_compile_options(${target} PRIVATE /WX)
        endif()
    else()
        target_compile_options(${target} PRIVATE -Wall -Wextra -Wpedantic -Wconversion -Wshadow)
        if(ORBITOPS_WARNINGS_AS_ERRORS)
            target_compile_options(${target} PRIVATE -Werror)
        endif()
        if(ORBITOPS_ENABLE_SANITIZERS)
            target_compile_options(${target} PRIVATE -fsanitize=address,undefined -fno-omit-frame-pointer)
            target_link_options(${target} PRIVATE -fsanitize=address,undefined)
        endif()
    endif()
endfunction()

add_executable(orbitops_sim src/main.cpp)
target_include_directories(orbitops_sim PRIVATE include)
target_compile_definitions(orbitops_sim PRIVATE ORBITOPS_VERSION="${PROJECT_VERSION}")
orbitops_apply_quality_options(orbitops_sim)

install(TARGETS orbitops_sim RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})

if(BUILD_TESTING)
    add_executable(orbitops_packet_test tests/test_packet.cpp)
    target_include_directories(orbitops_packet_test PRIVATE include)
    orbitops_apply_quality_options(orbitops_packet_test)
    add_test(NAME packet_encoding COMMAND orbitops_packet_test)
endif()
